--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -12,6 +12,41 @@
         </nav>
         <p class="menu">Menu</p>
         <section>
+            <section class="grupo">
+                <header>Salchipapas</header>
+                <article class="salchipapa">
+                <div class = "item">
+                    <%= image_tag "salchipapa.png", class: "img-salchipapa"%>
+                    <div class="informacion" >
+                        <h3>Salchipapa Trifasica</h3>
+                        <ul>
+                                <li>Papas fritas</li>
+                                <li>Salchichas</li>
+                                <li>Queso</li>
+                                <li>Salsas</li>
+                        </ul>
+                        <p>Precio:</p>
+                        <button>Pedir</button>
+                    </div>
+                </div>
+                    <!--Esta es la segunda salchipapa-->
+                <div class="item">
+                    <%= image_tag "salchipapa2.png", class: "img-salchipapa2"%>
+                    <div class = "informacion">
+                        <h3>Salchipapa Trifasica</h3>
+                        <ul>
+                            <li>Papas fritas</li>
+                            <li>Salchichas</li>
+                            <li>Queso</li>
+                            <li>Salsas</li>
+                        </ul>
+                        <p>Precio:</p>
+                        <button>Pedir</button>
+                    </div>
+                </div>
+            </article>
+
+            </section>
                 <!--Esta es la salchipapa-->
             <article class="salchipapa">
                 <h4 class ="nombre-salchipapa">Salchipapas</h4>
