--- a/docs/views/docs.html
+++ b/docs/views/docs.html
@@ -61,4 +61,10 @@
         <a href="PDF/macckup30-04-2025 15.36.pdf" class="btn-ver">Ver</a>
         <a href="PDF/macckup30-04-2025 15.36.pdf" download>Descargar PDF</a>
     </div>
+    <div class="contenedor">
+        <h2>Acta de Reunion 2</h2>
+        <p>Un acta de reunión es un documento escrito que registra formalmente los detalles de una reunión, como los temas discutidos, las decisiones tomadas y los acuerdos alcanzados.</p>
+        <a href="PDF/actaR2.pdf" class="btn-ver">Ver</a>
+        <a href="PDF/actaR2.pdf" download>Descargar PDF</a>
+    </div>
 </main>
