--- a/app/assets/stylesheets/home.css
+++ b/app/assets/stylesheets/home.css
@@ -1,9 +1,16 @@
-header {
+.inicio {
+    height: 110px;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
     display: flex;
-    justify-content: center; 
+    justify-content: center;
     align-items: center;     
     background-color: yellow;
     padding: 20px;
+    z-index: 1000;
+
 }
 
 .nombre {
@@ -19,120 +26,151 @@ header {
     border-radius: 100px;
 }
 
+body{
+    padding-top: 60px;
+    padding-bottom: 60px;
 
-nav {
-    border: 1px solid black;
-    height: 50px;
-    width: 300px;
-}
-
-.menu{
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: xx-large;
-    
-}
-
-section .grupo{
-    border: 1px solid red;
-    /* height: 100px; */
-}
-
-section {
-
-    border: 1px solid blue;
-
-    .salchipapa{
-        border: 1px solid red;
-        height: auto;
-        width: 800px;
-        display: flex;
-        gap: 40px;
-
-        .nombre-salchipapa{
-            margin-top: 20px;
-        }
-
-        .img-salchipapa{
-            height: 300px;
-            width: 300px;
-            max-width: 100%;
-        }
-            
-        .img-salchipapa2{
-            height: 300px;
-            width: 300px;
-            max-width: 100%;
-        }        
-    }
-
-    .hamburguesa{
-        height: auto;
-        width: 800px;
-        display: flex;
-        gap: 40px;
-        
-
-        .img-hamburguesas{
-            height: 250px;
-            width: 300px;
-            max-width: 100%;
-            
-        }
-        .img-hamburguesa2{
-            height: 250px;
-            width: 300px;
-            max-width: 100%;
-        }
-    }
-
-    .pizzas{
-        height: auto;
-        width: 800px;
-        display: flex;
-        gap: 40px;
-        
-
-        .img-pizza{
-            height: 250px;
-            width: 300px;
-            max-width: 100%;
-        }
-        .img-pizza2{
-            height: 250px;
-            width: 300px;
-            max-width: 100%;
-        }
-    }
-    
-        
-    .item{
+    nav {
+        border: 1px solid black;
+        height: 50px;
         width: 300px;
-        border: 1px solid #ccc;
-        overflow: hidden;
-        margin-right: 30px;
-        margin-bottom: 50px;
     }
+    
+    .menu{
+        font-family: Arial, Helvetica, sans-serif;
+        font-size: xx-large;
         
-        .item .informacion {
-            max-height: 0;
+    }
+    
+    section {
+    
+        .nombre-salchipapa{
+            font-family: 'Times New Roman', Times, serif;
+            font-size: x-large;
+        }
+    
+        .salchipapa{
+            height: auto;
+            width: 800px;
+            display: flex;
+            gap: 40px;
+    
+            .img-salchipapa{
+                height: 300px;
+                width: 300px;
+                max-width: 100%;
+            }
+                
+            .img-salchipapa2{
+                height: 300px;
+                width: 300px;
+                max-width: 100%;
+            }        
+        }
+    
+        .nombre-hamburguesas{
+            font-size: x-large;
+            font-family: 'Times New Roman', Times, serif;
+        }
+    
+        .hamburguesa{
+            height: auto;
+            width: 800px;
+            display: flex;
+            gap: 40px;
+    
+            .img-hamburguesas{
+                height: 250px;
+                width: 300px;
+                max-width: 100%;
+                
+            }
+            .img-hamburguesa2{
+                height: 250px;
+                width: 300px;
+                max-width: 100%;
+            }
+        }
+    
+        .nombre-pizzas{
+            font-family:'Times New Roman', Times, serif;
+            font-size: x-large;
+        }
+    
+        .pizzas{
+            height: auto;
+            width: 800px;
+            display: flex;
+            gap: 40px;
+            
+    
+            .img-pizza{
+                height: 250px;
+                width: 300px;
+                max-width: 100%;
+            }
+            .img-pizza2{
+                height: 250px;
+                width: 300px;
+                max-width: 100%;
+            }
+        }
+        
+            
+        .item{
+            width: 300px;
             overflow: hidden;
-            background-color: #f0f0f0;
-            transition: max-height 0.5s ease;
-            padding: 0 10px;
+            margin-right: 30px;
+            margin-bottom: 50px;
         }
-      
-      
-        .item:hover .informacion {
-            max-height: 300px;  
-            padding: 10px;
-        }
-      
-      .item button {
-            margin-top: 10px;
-            padding: 5px 10px;
-            background-color: yellow;
-            color: black;
-            border: none;
-            cursor: pointer;
-        }
+            
+            .item .informacion {
+                max-height: 0;
+                overflow: hidden;
+                background-color: #f0f0f0;
+                transition: max-height 0.5s ease;
+                padding: 0 10px;
+            }
+          
+          
+            .item:hover .informacion {
+                max-height: 300px;  
+                padding: 10px;
+            }
+          
+          .item button {
+                margin-top: 10px;
+                padding: 5px 10px;
+                background-color: yellow;
+                color: black;
+                border: none;
+                cursor: pointer;
+            }
+    }
+}
+footer{
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    background-color: yellow;
+    color: black;
+    padding: 15px 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 1000;
+    
+}
+
+.tiktok{
+    height: 30px;
+    width: 30px;
+    border-radius: 20px;
+}
+
+.instagram{
+    height: 30px;
+    width: 30px;
+    border-radius: 20px;
 }
