--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1,18 +1,3 @@
-/*
- * This is a manifest file that'll be compiled into application.css.
- *
- * With Propshaft, assets are served efficiently without preprocessing steps. You can still include
- * application-wide styles in this file, but keep in mind that CSS precedence will follow the standard
- * cascading order, meaning styles declared later in the document or manifest will override earlier ones,
- * depending on specificity.
- *
- * Consider organizing styles into separate files for maintainability.
- */
-
- /*
- *= require bootstrap.min
- *= require_self
- */
 
 :root {
     
@@ -27,7 +12,6 @@
 
 body{
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-
     margin: 0;
     padding: 0;
 }
@@ -35,8 +19,8 @@ body{
 .login{
     display: flex;
     flex-direction: column;
-    height: 100dvh;
     justify-content: center;
+    min-height: 100vh;
     align-items: center;
     background: linear-gradient(70deg, var(--base-claro),var(--base),var(--base-oscuro));
 }
@@ -241,4 +225,103 @@ body{
 .registro-form ol li {
     margin-bottom: 5px;
     width: 100%;
+}
+
+.footer{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-top: 20px;
+    gap: 5px;
+}
+
+.header{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 20px;
+    background-color: var(--base);
+}
+.header h1{
+    margin: 0;
+    font-size: 55px;
+    font-stretch: extra-expanded;
+    text-shadow: 0px 0px 5px rgb(0, 0, 0);
+    color: var(--blanco);
+}
+.header img{
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+    border: 2px solid #f9f9f9;
+}
+.navbar{
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+    padding: 10px 10px;
+    background-color: var(--base-oscuro);
+    position: sticky;
+    top: 0;
+    box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.1);
+    z-index: 10;
+}
+
+.user{
+
+    padding: 1.5px;
+    border: 1px solid white;
+    border-radius: 50%;
+}
+
+.busqueda{
+    margin-right: auto;
+}
+section{
+    height: 200vh;
+}
+
+.navbar button{
+    background: none;
+    width: fit-content;
+    border: none;
+}
+
+.navbar img{
+    width: 30px;
+    height: 30px;
+    margin: 0 10px;
+}
+
+.cartas{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 10px;
+}
+.botonL,.botonR{
+    border: none;
+    height: fit-content;
+    border-radius: 50%;
+    font-size: 30px;
+    background-color: var(--base-oscuro);
+    color: var(--blanco);
+}
+
+.botonL{
+    position: absolute;
+    left: 0;
+}
+
+.botonR{
+    position:absolute;
+    right: 0;
+
+}
+
+.carta img{
+    width: 200px;
+    height: 200px;
 }
