--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,5 +24,8 @@
 
   <body>
     <%= yield %>
+
+    <%= javascript_include_tag "application", "data-turbo-track": "reload" %>
+
   </body>
 </html>
