--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,9 +1,9 @@
 <section class="registro">
-  <div class="registro-header">
+  <header class="session-header">
     <h1>La Terraza del Pri</h1>
     <%= image_tag "LogoTerrazaDelPri.svg" %>
-  </div>
-  <div class="registro-form">
+  </header>
+  <div class="session-form">
     <h2>Regístrate</h2>
     
     <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
@@ -43,24 +43,25 @@
       </div>
 
       <div class="actions">
-        <%= f.submit "Sign up" %>
+        <%= f.submit "Registrar" %>
       </div>
     <% end %>
 
-    <%= render "devise/shared/links" %>
+    <p>¿Ya tienes cuanta? <br> <%= link_to "Inicia sesion", new_session_path(resource_name) %></p>
+
   </div>
-  <div class="registro-footer">
-  <div class="social">
-    <a href="https://www.instagram.com/laterrazadelpri?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==" target="_blank">
-      <%= image_tag "icons/instagram-brands.svg" %>
-    </a>
-    <a href="https://wa.me/573113678033" target="_blank">
-      <%= image_tag "icons/whatsapp-brands.svg" %>
-    </a>
-    <a href="https://www.tiktok.com/@laterrazadelpri?is_from_webapp=1&sender_device=pc" target="_blank">
-      <%= image_tag "icons/tiktok-brands.svg" %>
-    </a>
-  </div>
+  <footer class="session-footer">
+    <div class="social">
+      <a href="https://www.instagram.com/laterrazadelpri?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==" target="_blank">
+        <%= image_tag "icons/instagram-brands.svg" %>
+      </a>
+      <a href="https://wa.me/573113678033" target="_blank">
+        <%= image_tag "icons/whatsapp-brands.svg" %>
+      </a>
+      <a href="https://www.tiktok.com/@laterrazadelpri?is_from_webapp=1&sender_device=pc" target="_blank">
+        <%= image_tag "icons/tiktok-brands.svg" %>
+      </a>
+    </div>
     <p>© 2023 La Terraza del Pri. Todos los derechos reservados.</p>
-  </div>
+  </footer>
 </section>
