--- a/docs/views/docs.html
+++ b/docs/views/docs.html
@@ -67,4 +67,10 @@
         <a href="PDF/actaR2.pdf" class="btn-ver">Ver</a>
         <a href="PDF/actaR2.pdf" download>Descargar PDF</a>
     </div>
+    <div class="contenedor">
+        <h2>Mackup movil</h2>
+        <p>Un mockup web es una representación visual, no funcional, de cómo lucirá una página web en su versión final.</p>
+        <a href="MackupAppMovil.pdf" class="btn-ver">Ver</a>
+        <a href="MackupAppMovil.pdf" download>Descargar PDF</a>
+    </div>
 </main>
