agregar modelo producto y asociarlo a grupo, añadir botones al dashboard

--- a/Ruby-Proyect/app/views/dashboard/grupos/index.html.erb
+++ b/Ruby-Proyect/app/views/dashboard/grupos/index.html.erb
@@ -6,4 +6,4 @@
     <% end %>
 </ul>
 
-<%= link_to "Crear un nuevo grupo", new_grupo_path %>
+<%= link_to "Crear un nuevo grupo", new_dashboard_grupo_path %>
