--- a/docs/views/docs.html
+++ b/docs/views/docs.html
@@ -45,32 +45,37 @@
     <div class="contenedor">
         <h2>Diagrama de clase</h2>
         <p>El diagrama de clases es un tipo de diagrama de estructura estática que describe la estructura de un sistema mostrando las clases del sistema, sus atributos, operaciones (o métodos), y las relaciones entre los objetos.</p>
-        <a href="PDF/Diagrama_Clase.pdf" class="btn-ver">Ver</a>
-        <a href="PDF/Diagrama_Clase.pdf" download>Descargar PDF</a>
-        
+        <a href="documents/Diagrama_Clase.pdf" class="btn-ver">Ver</a>
+        <a href="documents/Diagrama_Clase.pdf" download>Descargar</a>
     </div>
     <div class="contenedor">
         <h2>Diagrama Entidad Relación</h2>
-        <p>Un modelo entidad-relación es una herramienta para el modelo de datos, la cual facilita la representación de entidades de una base de datos</p>
-        <a href="PDF/Diagrama_Entidad_Relacion.pdf" class="btn-ver">Ver</a>
-        <a href="PDF/Diagrama_Entidad_Relacion.pdf" download>Descargar PDF</a>
+        <p>Un modelo entidad-relación es una herramienta para el modelo de datos, la cual facilita la representación de entidades de una base de datos.</p>
+        <a href="documents/Diagrama_Entidad_Relacion.pdf" class="btn-ver">Ver</a>
+        <a href="documents/Diagrama_Entidad_Relacion.pdf" download>Descargar</a>
+    </div>
+        <div class="contenedor">
+        <h2>Ficha Casos de Uso</h2>
+        <p>Una ficha de caso de uso es un documento que detalla una descripción de cómo un usuario interactúa con un sistema para lograr un objetivo específico.</p>
+        <a href="documents/FichaCasosDeUso.jpg" class="btn-ver">Ver</a>
+        <a href="documents/FichaCasosDeUso.jpg" download>Descargar</a>
     </div>
     <div class="contenedor">
         <h2>Mackup</h2>
         <p>Un mockup web es una representación visual, no funcional, de cómo lucirá una página web en su versión final.</p>
-        <a href="PDF/macckup30-04-2025 15.36.pdf" class="btn-ver">Ver</a>
-        <a href="PDF/macckup30-04-2025 15.36.pdf" download>Descargar PDF</a>
+        <a href="documents/macckup30-04-2025 15.36.pdf" class="btn-ver">Ver</a>
+        <a href="documents/macckup30-04-2025 15.36.pdf" download>Descargar</a>
     </div>
     <div class="contenedor">
         <h2>Mackup movil</h2>
         <p>Un mockup web es una representación visual, no funcional, de cómo lucirá una página web en su versión final.</p>
-        <a href="PDF/MackupAppMovil.pdf" class="btn-ver">Ver</a>
-        <a href="PDF/MackupAppMovil.pdf" download>Descargar PDF</a>
+        <a href="documents/MackupAppMovil.pdf" class="btn-ver">Ver</a>
+        <a href="documents/MackupAppMovil.pdf" download>Descargar</a>
     </div>
     <div class="contenedor">
         <h2>Acta de Reunion 2</h2>
         <p>Un acta de reunión es un documento escrito que registra formalmente los detalles de una reunión, como los temas discutidos, las decisiones tomadas y los acuerdos alcanzados.</p>
-        <a href="PDF/actaR2.pdf" class="btn-ver">Ver</a>
-        <a href="PDF/actaR2.pdf" download>Descargar PDF</a>
+        <a href="documents/actaR2.pdf" class="btn-ver">Ver</a>
+        <a href="documents/actaR2.pdf" download>Descargar</a>
     </div>
 </main>
