--- a/docs/views/docs.html
+++ b/docs/views/docs.html
@@ -54,11 +54,17 @@
         <a href="documents/Diagrama_Entidad_Relacion.pdf" class="btn-ver">Ver</a>
         <a href="documents/Diagrama_Entidad_Relacion.pdf" download>Descargar</a>
     </div>
-        <div class="contenedor">
+    <div class="contenedor">
         <h2>Ficha Casos de Uso</h2>
         <p>Una ficha de caso de uso es un documento que detalla una descripción de cómo un usuario interactúa con un sistema para lograr un objetivo específico.</p>
         <a href="documents/FichaCasosDeUso.jpg" class="btn-ver">Ver</a>
         <a href="documents/FichaCasosDeUso.jpg" download>Descargar</a>
+    </div>
+    <div class="contenedor">
+        <h2>Diagrama Casos de Uso</h2>
+        <p>Un diagrama de casos de uso es una herramienta visual que se utiliza en la modelación de sistemas, especialmente en el desarrollo de software.</p>
+        <a href="documents/DiagramaCasosDeUso.jpg" class="btn-ver">Ver</a>
+        <a href="documents/DiagramaCasosDeUso.jpg" download>Descargar</a>
     </div>
     <div class="contenedor">
         <h2>Mackup</h2>
